--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,50 @@
 /* Style for the buttons */
+body{
+  background: url(./bg.avif);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+}
+
+.overlayContainer{
+  background: linear-gradient(0deg, #00000054 30%, #fff6f6b6 100%);
+  height: 100vh;
+}
+
 button {
   padding: 10px 20px;
   font-size: 20px;
   margin-right: 10px;
+}
+
+
+.popup {
+  display: none;
+  background: linear-gradient(45deg, #00000090 30%, #172f46 100%);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.popup h2 {
+  margin-top: 0;
+}
+
+.popup p {
+  margin-bottom: 20px;
+}
+.popup button {
+  display: block;
+  margin-top: 20px;
+}
+
+.button-container{
+  display: flex;
+  justify-content: space-around ;
 }
