--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body{
 }
 
 .overlayContainer{
-  background: linear-gradient(0deg, #00000054 30%, #fff6f6b6 100%);
+  background: linear-gradient(0deg, #000000 30%, #00304ede 100%);
   height: 100vh;
 }
 .content {
@@ -98,7 +98,6 @@ header {
   height: 50px;
   display: flex;
   padding: 0;
-
   align-items: center;
   margin: 0;
 }
@@ -109,6 +108,10 @@ header {
 }
 footer {
   justify-content: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%
 }
 
 .navi {
@@ -125,17 +128,16 @@ footer {
   background-size: contain;
 }
 
-/* Style the LinkedIn icon */
+
 .linkedin-icon {
   background-image: url("https://www.linkedin.com/favicon.ico");
 }
 
-/* Style the GitHub icon */
+
 .github-icon {
   background-image: url("https://github.com/favicon.ico");
 }
 
-/* Style the Gmail icon */
 .gmail-icon {
   background-image: url("https://ssl.gstatic.com/ui/v1/icons/mail/rfr/logo_gmail_lockup_dark_1x_r2.png");
   background-size: cover;
