--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,14 @@ body{
   background-repeat: no-repeat;
   background-position: center;
   height: 100vh;
+  margin: 0;
+  color: rgb(174, 194, 255);
 }
 
 .overlayContainer{
   background: linear-gradient(0deg, #000000 30%, #00304ede 100%);
   height: 100vh;
+  
 }
 .content {
   width: 100%;
@@ -42,6 +45,8 @@ button {
   padding: 10px 20px;
   font-size: 20px;
   margin-right: 10px;
+  background-color: pink;
+  border-radius: 80%;
 }
 
 
@@ -93,11 +98,11 @@ th, td {
 
 footer,
 header {
-  background-color: rgba(0, 0, 0, 0.752);
+  background-color: rgba(0, 0, 0, 0.552);
   width: 100%;
   height: 50px;
   display: flex;
-  padding: 0;
+  padding: 0 5px;
   align-items: center;
   margin: 0;
 }
@@ -142,3 +147,16 @@ footer {
   background-image: url("https://ssl.gstatic.com/ui/v1/icons/mail/rfr/logo_gmail_lockup_dark_1x_r2.png");
   background-size: cover;
 }
+
+.score{
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+/*change
+.left, .right{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+} 
+*/
