--- a/styles.css
+++ b/styles.css
@@ -1,156 +1,164 @@
 /* Style for the buttons */
-body{
-  background: url(./bg.avif);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 100vh;
-  margin: 0;
-  color: rgb(174, 194, 255);
+body {
+    background: url(./bg.avif);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
+    margin: 0;
+    color: rgb(174, 194, 255);
 }
 
-.overlayContainer{
-  background: linear-gradient(0deg, #000000 30%, #00304ede 100%);
-  height: 100vh;
+.overlayContainer {
+    background: linear-gradient(0deg, #000000 30%, #00304ede 100%);
+    height: 100vh;
 
-  color: rgb(168, 255, 229);
+    color: rgb(168, 255, 229);
 
 }
+
 .content {
-  width: 100%;
-  max-width: 800px; 
-  margin: 0 auto; 
-  padding: 20px;
-  box-sizing: border-box;
-  text-align: justify;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
+    text-align: justify;
 }
 
 @media (min-width: 768px) {
-  .content {
-    width: 75%;
-  }
+    .content {
+        width: 75%;
+    }
 }
 
 @media (min-width: 992px) {
-  .content {
-    width: 50%;
-  }
+    .content {
+        width: 50%;
+    }
 }
 
 @media (min-width: 1200px) {
-  .content {
-    width: 33.33%;
-  }
+    .content {
+        width: 33.33%;
+    }
 }
 
 
 
 
 .popup {
-  display: none;
-  background: linear-gradient(45deg, #00322fb3 30%, #002548 100%);
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 60%;
-  margin: 10px;
-  padding: 20px;
-  background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  border: solid 3px black;
+    display: none;
+    background: linear-gradient(45deg, #00322fb3 30%, #002548 100%);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    margin: 10px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    border: solid 3px black;
 }
 
 .popup h2 {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 .popup p {
-  margin-bottom: 20px;
-}
-.popup button {
-  display: block;
-  margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.button-container{
- 
-  display: flex;
-  justify-content: space-around ;
+.popup button {
+    display: block;
+    margin-top: 20px;
+}
+
+.button-container {
+
+    display: flex;
+    justify-content: space-around;
 }
 
 table {
-  border-collapse: collapse;
-  width: 100%;
-  max-width: 800px; /* optional - set a maximum width for the table */
-  margin: 0 auto; /* optional - center the table on the page */
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 800px;
+    /* optional - set a maximum width for the table */
+    margin: 0 auto;
+    /* optional - center the table on the page */
 }
 
-th, td {
-  border: 1px solid #ccc;
-  padding: 8px;
-  text-align: left;
+th,
+td {
+    border: 1px solid #ccc;
+    padding: 8px;
+    text-align: left;
 }
 
 
 
 footer,
 header {
-  background-color: rgba(0, 0, 0, 0.552);
-  width: 100%;
-  height: 50px;
-  display: flex;
-  padding: 0 5px;
-  align-items: center;
-  margin: 0;
+    background-color: rgba(0, 0, 0, 0.552);
+    width: 100%;
+    height: 50px;
+    display: flex;
+    padding: 0 5px;
+    align-items: center;
+    margin: 0;
 }
 
 
 header {
-  justify-content: space-between;
+    justify-content: space-between;
 }
+
 footer {
-  justify-content: center;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%
 }
 
 .navi {
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
 }
+
 .icon {
-  display: inline-block;
-  margin: 0 10px;
-  width: 20px;
-  height: 20px;
-  background-repeat: no-repeat;
-  background-size: contain;
+    display: inline-block;
+    margin: 0 10px;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 
 .linkedin-icon {
-  background-image: url("https://www.linkedin.com/favicon.ico");
+    background-image: url("https://www.linkedin.com/favicon.ico");
 }
 
 
 .github-icon {
-  background-image: url("https://github.com/favicon.ico");
+    background-image: url("https://github.com/favicon.ico");
 }
 
 .gmail-icon {
-  background-image: url("https://ssl.gstatic.com/ui/v1/icons/mail/rfr/logo_gmail_lockup_dark_1x_r2.png");
-  background-size: cover;
+    background-image: url("https://ssl.gstatic.com/ui/v1/icons/mail/rfr/logo_gmail_lockup_dark_1x_r2.png");
+    background-size: cover;
 }
 
-.score{
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
+.score {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
 }
+
 /*change
 .left, .right{
   display: flex;
@@ -161,39 +169,42 @@ footer {
 
 
 
-#rock{
-  background-image: url("./rock.png");
-}
-#paper{
-  background-image: url("./paper.png");
-}
-#scissors{
-  background-image: url("./scissors.png");
+#rock {
+    background-image: url("./rock.png");
 }
 
-#rock , #paper, #scissors{
+#paper {
+    background-image: url("./paper.png");
+}
 
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 100px;
-  height: 50px;
-  border: none;
-  color: #fff;
-  background-color: #007bff00;
-  cursor: pointer;
+#scissors {
+    background-image: url("./scissors.png");
+}
+
+
+
+.optionsIcon {
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100px;
+    height: 100px;
+    border: none;
+    color: #fff;
+    background-color: #007bff00;
+    cursor: pointer;
 }
 
 button {
-  padding: 10px 20px;
-  font-size: 20px;
-  margin-right: 10px;
-  /*background-color: pink;
+    padding: 10px 20px;
+    font-size: 20px;
+    margin-right: 10px;
+    /*background-color: pink;
   border-radius: 80%;*/
 }
 
-.options{
-  display: flex;
-  justify-content: center;
-  gap: 33px;
-  padding: 100px 10px;
+.options {
+    display: flex;
+    justify-content: center;
+    gap: 33px;
+    padding: 100px 10px;
 }
