--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Style for the buttons */
 body {
-    background: url(./bg.avif);
+    background: url(./images/bg.avif);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
