--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Style for the buttons */
 body {
     background: url(./images/bg.avif);
     background-size: cover;
@@ -10,13 +9,11 @@ body {
     font-family: 'Gambetta', serif;
 }
 
-
 .overlayContainer {
     background: linear-gradient(0deg, #000000 30%, #00304ede 100%);
     height: 100vh;
     color: rgb(168, 255, 229);
 }
-
 
 h1 {
     font-size: 50px;
@@ -33,7 +30,6 @@ h1:hover {
     font-variation-settings: "wght"582;
     letter-spacing: 1px;
 }
-
 
 .content {
     display: flex;
@@ -66,9 +62,6 @@ h1:hover {
     }
 }
 
-
-
-
 .popup {
     display: none;
     background: linear-gradient(45deg, #00322fb3 30%, #002548 100%);
@@ -98,29 +91,9 @@ h1:hover {
 }
 
 .button-container {
-
     display: flex;
     justify-content: space-around;
 }
-
-/* 
-table {
-    border-collapse: collapse;
-    width: 100%;
-    max-width: 800px;
-   
-    margin: 0 auto;
-    
-}
-
-th,
-td {
-    border: 1px solid #ccc;
-    padding: 8px;
-    text-align: left;
-}
-
-*/
 
 footer,
 header {
@@ -132,7 +105,6 @@ header {
     align-items: center;
     margin: 0;
 }
-
 
 header {
     justify-content: space-between;
@@ -161,11 +133,9 @@ footer {
     background-size: contain;
 }
 
-
 .linkedin-icon {
     background-image: url("https://www.linkedin.com/favicon.ico");
 }
-
 
 .github-icon {
     background-image: url("https://github.com/favicon.ico");
@@ -183,13 +153,29 @@ footer {
     gap: 50px;
 }
 
-/*change
-.left, .right{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-} 
-*/
+.column {
+    color: rgb(168, 255, 229);
+    margin: 25px 10px;
+    padding: 27px 0;
+    width: 200px;
+    background-color: transparent;
+    border: none;
+    box-shadow: 0 0 10px #98f8ff, 0 0 10px #000000 inset;
+    transition: all 0.3s ease-in;
+}
+
+.resultDiv {
+    color: rgb(168, 255, 229);
+    margin: 25px 10px;
+    padding: 27px;
+    width: 450px;
+    background-color: transparent;
+    border: none;
+    box-shadow: 0 0 10px #98f8ff, 0 0 10px #000000 inset;
+    transition: all 0.3s ease-in;
+    text-align: center;
+}
+
 .optionsIcon {
     background-repeat: no-repeat;
     background-size: contain;
@@ -199,14 +185,6 @@ footer {
     color: #fff;
     background-color: #007bff00;
     cursor: pointer;
-}
-
-button {
-    padding: 10px 20px;
-    font-size: 20px;
-    margin-right: 10px;
-    /*background-color: pink;
-  border-radius: 80%;*/
 }
 
 .options {
