--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,13 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     color: rgb(168, 255, 229);
     font-family: 'Gambetta', serif;
 }
+
+
 
 .overlayContainer {
     background: linear-gradient(0deg, #000000 30%, #00304ede 100%);
@@ -16,7 +18,7 @@ body {
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 3rem;
     text-transform: uppercase;
     letter-spacing: -3px;
     transition: 700ms ease;
@@ -44,23 +46,7 @@ h1:hover {
     text-align: justify;
 }
 
-@media (min-width: 768px) {
-    .content {
-        width: 75%;
-    }
-}
 
-@media (min-width: 992px) {
-    .content {
-        width: 50%;
-    }
-}
-
-@media (min-width: 1200px) {
-    .content {
-        width: 33.33%;
-    }
-}
 
 .popup {
     display: none;
@@ -148,6 +134,7 @@ footer {
 
 .score {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     text-align: center;
     gap: 50px;
@@ -189,6 +176,7 @@ footer {
 
 .options {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 33px;
     padding: 50px 10px;
@@ -211,4 +199,66 @@ footer {
 .diamond:hover {
     font-variation-settings: "wght"582;
     letter-spacing: 1px;
+}
+
+@media (max-width: 480px) {
+    .logo {
+        display: none;
+    }
+
+    nav {
+        margin-top: 1rem;
+    }
+
+    .options {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+        height: 12rem;
+    }
+
+
+    .score {
+        display: none;
+    }
+
+    .resultDiv {
+        margin-top: 2rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .content {
+        width: 75%;
+    }
+
+
+
+    .score {
+        display: flex;
+        margin-top: 2rem;
+    }
+
+    .column {
+        flex-basis: 50%;
+    }
+
+    .resultDiv {
+        margin-top: 3rem;
+    }
+}
+
+@media (min-width: 992px) {
+    .content {
+        width: 50%;
+    }
+
+
+}
+
+@media (min-width: 1200px) {
+    .content {
+        width: 33.33
+    }
 }
