--- a/styles.css
+++ b/styles.css
@@ -1,273 +1,276 @@
 body {
-    background: url(./images/bg.avif);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100vh;
-    margin: 0;
-    color: rgb(168, 255, 229);
-    font-family: 'Gambetta', serif;
-    }
-    
-    .overlayContainer {
-    background: linear-gradient(0deg, #000000 30%, #00304ede 100%);
-    height: 100vh;
-    color: rgb(168, 255, 229);
-    }
-    
-    h1 {
-    font-size: 50px;
-    text-transform: uppercase;
-    letter-spacing: -3px;
-    transition: 700ms ease;
-    font-variation-settings: "wght"311;
-    margin-bottom: 0.8rem;
-    outline: none;
-    text-align: center;
-    }
-    
-    h1:hover {
-    font-variation-settings: "wght"582;
-    letter-spacing: 1px;
-    }
-    
-    .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    box-sizing: border-box;
-    text-align: justify;
-    }
-    
-    .options {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px 0;
-    }
-    
-    .options button {
-    flex: 1;
-    margin: 0 5px;
-    }
-    
-    .score {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px 0;
-    }
-    
-    .score .column {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    }
-    
-    .score h2, .score h2#yourScoreCell, .score h2#computerScoreCell {
-    font-size: 30px;
-    margin: 0;
-    }
-    
-    .score p {
-    margin: 5px 0;
-    }
-    
-    .resultDiv {
-    margin-top: 20px;
-    text-align: center;
-    }
-    
-    .resultDiv #result {
-    font-size: 30px;
-    margin: 0;
-    }
-    
-    .button-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px 0;
-    }
-    
-    .button-container button {
-    flex: 1;
-    margin: 0 5px;
-    font-size: 20px;
-    }
-    
-@media (max-width: 767px) {
-    h1 {
-    font-size: 30px;
-    letter-spacing: -2px;
-    }
-    .content {
-    padding: 10px;
-    }
-    .options {
-    flex-direction: column;
-    }
-    .options button {
-    margin: 5px 0;
-    }
-    .score {
-    flex-direction: column;
-    }
-    .score .column {
-    margin: 10px 0;
-    }
-    .score h2, .score h2#yourScoreCell, .score h2#computerScoreCell {
-    font-size: 20px;
-    }
-    .resultDiv #result {
-    font-size: 20px;
-    }
-}
-    
-    
-.popup {
-    display: none;
-    background: linear-gradient(45deg, #00322fb3 30%, #002548 100%);
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 60%;
-    margin: 10px;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    border: solid 3px black;
+  background: url(./images/bg.avif);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100%;
+  margin: 0;
+  color: rgb(168, 255, 229);
+  font-family: "Gambetta", serif;
 }
 
-.popup h2 {
-    margin-top: 0;
+.overlayContainer {
+  background: linear-gradient(0deg, #000000 30%, #00304ede 100%);
+  height: 100vh;
+  color: rgb(168, 255, 229);
 }
 
-.popup p {
-    margin-bottom: 20px;
+h1 {
+  font-size: 50px;
+  text-transform: uppercase;
+  letter-spacing: -3px;
+  transition: 700ms ease;
+  font-variation-settings: "wght" 311;
+  margin-bottom: 0.8rem;
+  outline: none;
+  text-align: center;
 }
 
-.popup button {
-    display: block;
-    margin-top: 20px;
+h1:hover {
+  font-variation-settings: "wght" 582;
+  letter-spacing: 1px;
 }
 
-.button-container {
-    display: flex;
-    justify-content: space-around;
-}
-
-header {
-    background-color: rgba(0, 0, 0, 0.552);
-    width: 100%;
-    height: 50px;
-    display: flex;
-    padding: 0 5px;
-    align-items: center;
-    margin: 0;
-    justify-content: space-between;
-}
-
-.navi {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-}
-
-.icon {
-    display: inline-block;
-    margin: 0 10px;
-    width: 20px;
-    height: 20px;
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-.linkedin-icon {
-    background-image: url("https://www.linkedin.com/favicon.ico");
-}
-
-.github-icon {
-    background-image: url("https://github.com/favicon.ico");
-}
-
-.gmail-icon {
-    background-image: url("https://ssl.gstatic.com/ui/v1/icons/mail/rfr/logo_gmail_lockup_dark_1x_r2.png");
-    background-size: cover;
-}
-
-.score {
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    gap: 50px;
-}
-
-.column {
-    color: rgb(168, 255, 229);
-    margin: 25px 10px;
-    padding: 27px 0;
-    width: 200px;
-    background-color: transparent;
-    border: none;
-    box-shadow: 0 0 10px #98f8ff, 0 0 10px #000000 inset;
-    transition: all 0.3s ease-in;
-}
-
-.resultDiv {
-    color: rgb(168, 255, 229);
-    margin: 25px 10px;
-    padding: 27px;
-    width: 450px;
-    background-color: transparent;
-    border: none;
-    box-shadow: 0 0 10px #98f8ff, 0 0 10px #000000 inset;
-    transition: all 0.3s ease-in;
-    text-align: center;
-}
-
-.optionsIcon {
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 100px;
-    height: 100px;
-    border: none;
-    color: #fff;
-    background-color: #007bff00;
-    cursor: pointer;
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: justify;
 }
 
 .options {
-    display: flex;
-    justify-content: center;
-    gap: 33px;
-    padding: 50px 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.options button {
+  flex: 1;
+  margin: 0 5px;
+}
+
+.score {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.score .column {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.score h2,
+.score h2#yourScoreCell,
+.score h2#computerScoreCell {
+  font-size: 30px;
+  margin: 0;
+}
+
+.score p {
+  margin: 5px 0;
+}
+
+.resultDiv {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.resultDiv #result {
+  font-size: 30px;
+  margin: 0;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.button-container button {
+  flex: 1;
+  margin: 0 5px;
+  font-size: 20px;
+}
+
+@media (max-width: 767px) {
+  h1 {
+    font-size: 30px;
+    letter-spacing: -2px;
+  }
+  .content {
+    padding: 10px;
+  }
+  .options {
+    flex-direction: column;
+  }
+  .options button {
+    margin: 5px 0;
+  }
+  .score {
+    flex-direction: column;
+  }
+  .score .column {
+    margin: 10px 0;
+  }
+  .score h2,
+  .score h2#yourScoreCell,
+  .score h2#computerScoreCell {
+    font-size: 20px;
+  }
+  .resultDiv #result {
+    font-size: 20px;
+  }
+}
+
+.popup {
+  display: none;
+  background: linear-gradient(45deg, #00322fb3 30%, #002548 100%);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60%;
+  margin: 10px;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  border: solid 3px black;
+}
+
+.popup h2 {
+  margin-top: 0;
+}
+
+.popup p {
+  margin-bottom: 20px;
+}
+
+.popup button {
+  display: block;
+  margin-top: 20px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+header {
+  background-color: rgba(0, 0, 0, 0.552);
+  width: 100%;
+  height: 50px;
+  display: flex;
+  padding: 0 5px;
+  align-items: center;
+  margin: 0;
+  justify-content: space-between;
+}
+
+.navi {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.icon {
+  display: inline-block;
+  margin: 0 10px;
+  width: 20px;
+  height: 20px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.linkedin-icon {
+  background-image: url("https://www.linkedin.com/favicon.ico");
+}
+
+.github-icon {
+  background-image: url("https://github.com/favicon.ico");
+}
+
+.gmail-icon {
+  background-image: url("https://ssl.gstatic.com/ui/v1/icons/mail/rfr/logo_gmail_lockup_dark_1x_r2.png");
+  background-size: cover;
+}
+
+.score {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  gap: 50px;
+}
+
+.column {
+  color: rgb(168, 255, 229);
+  margin: 25px 10px;
+  padding: 27px 0;
+  width: 200px;
+  background-color: transparent;
+  border: none;
+  box-shadow: 0 0 10px #98f8ff, 0 0 10px #000000 inset;
+  transition: all 0.3s ease-in;
+}
+
+.resultDiv {
+  color: rgb(168, 255, 229);
+  margin: 25px 10px;
+  padding: 27px;
+  width: 450px;
+  background-color: transparent;
+  border: none;
+  box-shadow: 0 0 10px #98f8ff, 0 0 10px #000000 inset;
+  transition: all 0.3s ease-in;
+  text-align: center;
+}
+
+.optionsIcon {
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100px;
+  height: 100px;
+  border: none;
+  color: #fff;
+  background-color: #007bff00;
+  cursor: pointer;
+}
+
+.options {
+  display: flex;
+  justify-content: center;
+  gap: 33px;
+  padding: 50px 10px;
 }
 
 .diamond {
-    color: rgb(168, 255, 229);
-    margin: 25px 10px;
-    padding: 27px 0;
-    width: 140px;
-    background-color: transparent;
-    font-size: 22px;
-    text-shadow: 0 0 7px #98f8ff;
-    border: none;
-    border-radius: 0% 60% 0% 60%;
-    box-shadow: 0 0 10px #98f8ff, 0 0 10px #000000 inset;
-    transition: all 0.3s ease-in;
+  color: rgb(168, 255, 229);
+  margin: 25px 10px;
+  padding: 27px 0;
+  width: 140px;
+  background-color: transparent;
+  font-size: 22px;
+  text-shadow: 0 0 7px #98f8ff;
+  border: none;
+  border-radius: 0% 60% 0% 60%;
+  box-shadow: 0 0 10px #98f8ff, 0 0 10px #000000 inset;
+  transition: all 0.3s ease-in;
 }
 
 .diamond:hover {
-    font-variation-settings: "wght"582;
-    letter-spacing: 1px;
+  font-variation-settings: "wght" 582;
+  letter-spacing: 1px;
 }
